@@ -31,3 +31,6 @@ standard moment n=5, value=class=Point name=Unnamed dimension=1 values=[983.5]
 Standard representative=ProductDistribution(Uniform(a = -1, b = 2) * Normal(mu = 1, sigma = 2))
 left=class=Uniform name=Uniform dimension=1 a=-1 b=2
 right=class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[1] sigma=class=Point name=Unnamed dimension=1 values=[2] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
+distribution=class=ProductDistribution name=ProductDistribution left=class=ProductDistribution name=ProductDistribution left=class=Uniform name=Uniform dimension=1 a=-1 b=1 right=class=Uniform name=Uniform dimension=1 a=-1 b=1 right=class=Uniform name=Uniform dimension=1 a=-1 b=1
+mean=class=Point name=Unnamed dimension=1 values=[0]
+standard deviation=class=Point name=Unnamed dimension=1 values=[0.19245]
