@@ -461,6 +461,7 @@ ot_pyinstallcheck_test (ParametrizedDistribution_std)
 ot_pyinstallcheck_test (Poisson_std)
 ot_pyinstallcheck_test (PoissonFactory_std)
 ot_pyinstallcheck_test (PosteriorDistribution_std)
+ot_pyinstallcheck_test (ProductDistribution_std)
 ot_pyinstallcheck_test (RandomMixture_std)
 ot_pyinstallcheck_test (RandomMixture_simplification)
 ot_pyinstallcheck_test (RandomMixture_grid1d)
