@@ -335,7 +335,6 @@ try:
     print("sum=", sum)
     print("CDF=%.6g" % sum.computeCDF(2.0))
     print("quantile=", sum.computeQuantile(0.2))
-
 except:
     import sys
     print("t_RandomMixture_std.py", sys.exc_info()[0], sys.exc_info()[1])
